--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,7 +13,7 @@
     <p>We do not collect any personal information through this application.</p>
 
     <h2>2. Data Usage</h2>
-    <p>This application only accesses Facebook data for display purposes and does not store any user data.</p>
+    <p>This application only accesses Facebook data for display purposes and does not store any user data.And post our event to my own page </p> 
 
     <h2>3. Changes to This Policy</h2>
     <p>We may update our Privacy Policy from time to time.</p>
